# server-infra-templates

./: # Agents Projects Context — Complete Tec.md  .env.example  .gitignore  .sops.yaml  AGENTS.md  BACKUP_PLAYBOOK.md  IMPLEMENTATION_PLAN_FB_ADS.md  IMPLEMENTATION_PLAN_GA4.md  IMPLEMENTATION_PLAN_GOOGLE_ADS.md  IMPLEMENTATION_PLAN_SEO.md  METABASE_DATA_SOURCES_INTEGRATION.md  README.md  SKILLS.md  agent-comparison.md  cline-readme.md  cline-troubleshooting.md  docker-compose.yml  evidence-cline.md  evidence-kilo.md  github-repos-analysis.md  kilo-readme.md  opencode-readme.md  pyproject.toml  troubleshooting-guide.md  users-manual.md
.agent/: agents.md
.opencode/: package-lock.json
ansible/: ansible.cfg
config/: promtail-config.yaml
crontab/: crontab_entry.txt
dbt/: README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
docs/: DEPENDENCIES.md  DOCKER_CONVENTIONS.md  ONBOARDING.md  SOP.md  SOPS_VAULT.md  attribution_model_design.md  attribution_sql_patterns.sql  phase2_roadmap.md
github-actions/: .env.example
kilo/: kilo.json
mcp/: README.md
metabase/: marketing_dashboard.json
prefect/: README.md  prefect.yaml  setup_work_pool.py
project/: Dockerfile  init.sh
research-worktree/: research-findings.md
scripts/: .env.example  agent_logger.py  audit.sh  backup-metabase.sh  backup-test.sh  deployment_wiring.py  import-sops.sh  import_dashboard.py  langgraph-diagnostics.sh  langgraph_client.py  langgraph_etl.py  langgraph_observability.py  monitor-s60-docker-stats.sh  monitoring_setup.py  pipeline.py  prefect_cron_bridge.py  (+5 more)
(+106 files in other folders)
