[project]
name = "metabase-pipeline"
version = "0.1.0"
description = "dlt multi-client data pipeline for Metabase analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dlt[postgres]>=0.5.0",
    "requests>=2.31.0",
    "google-analytics-data>=0.18.0",
    "facebook-business>=18.0.0",
    "litellm>=1.40.0",
    # LangGraph for ETL orchestration
    "langgraph>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
